--- a/.github/workflows/gradle-junit5-example-test-pr.yml
+++ b/.github/workflows/gradle-junit5-example-test-pr.yml
@@ -16,5 +16,5 @@ jobs:
         java-version: 11
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew :example:junit5:test
+    - name: Run tests using Gradle
+      run: ./gradlew :example:junit5:test -i
