Show shard ID in examples

--- a/.github/workflows/gradle-junit5-example-test-pr.yml
+++ b/.github/workflows/gradle-junit5-example-test-pr.yml
@@ -17,4 +17,4 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Run tests using Gradle
-      run: ./gradlew :example:junit5:test -i
+      run: ./gradlew :example:junit5:test
