--- a/.github/workflows/gradle-junit5-example-test-pr.yml
+++ b/.github/workflows/gradle-junit5-example-test-pr.yml
@@ -1,7 +1,7 @@
 name: Run Gradle Test on PRs
 on: pull_request
 jobs:
-  run-sharded-tests:
+  run-sharded-junit5-example-tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
